feat(auth): Implement login functionality with request and response DTOs