@@ -15,10 +15,13 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
 class UserServiceTest {
 
   @Mock private UserRepository userRepository;
+
+  @Mock private PasswordEncoder passwordEncoder;
 
   @InjectMocks private UserService userService;
 
@@ -104,10 +107,10 @@ class UserServiceTest {
         User.builder()
             .username(oldUsername)
             .email("test@example.com")
-            .password("testPassword")
+            .password("$2a$10$hashedPassword")
             .build();
     UpdateUserRequestDto updateUserRequestDto =
-        new UpdateUserRequestDto(oldUsername, newUsername, null, null);
+        new UpdateUserRequestDto(oldUsername, newUsername, null, null, null);
 
     when(userRepository.findByUsername(oldUsername)).thenReturn(user);
     when(userRepository.save(any(User.class))).thenReturn(user);
@@ -120,11 +123,35 @@ class UserServiceTest {
   }
 
   @Test
+  void updateUserShouldUpdatePasswordWhenUserExists() {
+    String username = "mattlol85";
+    String newPassword = "newPassword123";
+    User user =
+        User.builder()
+            .username(username)
+            .email("test@example.com")
+            .password("$2a$10$oldHashedPassword")
+            .build();
+    UpdateUserRequestDto updateUserRequestDto =
+        new UpdateUserRequestDto(username, null, null, null, newPassword);
+
+    when(userRepository.findByUsername(username)).thenReturn(user);
+    when(passwordEncoder.encode(newPassword)).thenReturn("$2a$10$newHashedPassword");
+    when(userRepository.save(any(User.class))).thenReturn(user);
+
+    userService.updateUser(updateUserRequestDto);
+
+    verify(passwordEncoder, times(1)).encode(newPassword);
+    verify(userRepository, times(1)).findByUsername(username);
+    verify(userRepository, times(1)).save(any(User.class));
+  }
+
+  @Test
   void updateUserShouldDoNothingWhenUserDoesNotExist() {
     String oldUsername = "unknownUser";
     String newUsername = "newUser";
     UpdateUserRequestDto updateUserRequestDto =
-        new UpdateUserRequestDto(oldUsername, newUsername, null, null);
+        new UpdateUserRequestDto(oldUsername, newUsername, null, null, null);
 
     when(userRepository.findByUsername(oldUsername)).thenReturn(null);
 
@@ -132,6 +159,62 @@ class UserServiceTest {
 
     verify(userRepository, times(1)).findByUsername(oldUsername);
     verify(userRepository, times(0)).save(any(User.class));
+  }
+
+  @Test
+  void verifyPasswordShouldReturnTrueWhenPasswordMatches() {
+    String username = "mattlol85";
+    String rawPassword = "testPassword123";
+    User user =
+        User.builder()
+            .username(username)
+            .email("test@example.com")
+            .password("$2a$10$hashedPassword")
+            .build();
+
+    when(userRepository.findByUsername(username)).thenReturn(user);
+    when(passwordEncoder.matches(rawPassword, "$2a$10$hashedPassword")).thenReturn(true);
+
+    boolean result = userService.verifyPassword(username, rawPassword);
+
+    assertTrue(result);
+    verify(userRepository, times(1)).findByUsername(username);
+    verify(passwordEncoder, times(1)).matches(rawPassword, "$2a$10$hashedPassword");
+  }
+
+  @Test
+  void verifyPasswordShouldReturnFalseWhenPasswordDoesNotMatch() {
+    String username = "mattlol85";
+    String rawPassword = "wrongPassword";
+    User user =
+        User.builder()
+            .username(username)
+            .email("test@example.com")
+            .password("$2a$10$hashedPassword")
+            .build();
+
+    when(userRepository.findByUsername(username)).thenReturn(user);
+    when(passwordEncoder.matches(rawPassword, "$2a$10$hashedPassword")).thenReturn(false);
+
+    boolean result = userService.verifyPassword(username, rawPassword);
+
+    assertFalse(result);
+    verify(userRepository, times(1)).findByUsername(username);
+    verify(passwordEncoder, times(1)).matches(rawPassword, "$2a$10$hashedPassword");
+  }
+
+  @Test
+  void verifyPasswordShouldReturnFalseWhenUserDoesNotExist() {
+    String username = "unknownUser";
+    String rawPassword = "testPassword123";
+
+    when(userRepository.findByUsername(username)).thenReturn(null);
+
+    boolean result = userService.verifyPassword(username, rawPassword);
+
+    assertFalse(result);
+    verify(userRepository, times(1)).findByUsername(username);
+    verify(passwordEncoder, times(0)).matches(any(), any());
   }
 
   @Test
@@ -149,7 +232,7 @@ class UserServiceTest {
 
     assertNotNull(users);
     assertEquals(1, users.size());
-    assertEquals("mattlol85", users.get(0).getUsername());
+    assertEquals("mattlol85", users.getFirst().getUsername());
     verify(userRepository, times(1)).findAll();
   }
 }
